--- a/src/main/webapp/WEB-INF/jspf/nav.jspf
+++ b/src/main/webapp/WEB-INF/jspf/nav.jspf
@@ -6,7 +6,7 @@
                 <a class="nav-link nav-white" href="/">Домой</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link nav-white" href="<c:url value="topics"/>">Обсуждение</a>
+                <a class="nav-link nav-white" href="<c:url value="/topics"/>">Обсуждение</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link nav-white disabled" href="#">Disabled</a>
